test/expect/cmd.cc-unknown-stderr.txt
^error: '--castxml-cc-unknown' not known!$
